manifest/portfolio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portfolio-httproute
  namespace: portfolio
spec:
  parentRefs:
  - name: portfolio-gateway
    namespace: portfolio
  hostnames:
  - portfolio.nguyenvietkhoi.io.vn
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: portfolio-service
      port: 3000
